// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserStakeMetrics Renders 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="MuiBox-root css-0"
      >
        <h4
          class="MuiTypography-root MuiTypography-h4 css-10zuisz-MuiTypography-root"
        >
          stake:StakingMetrics
           
        </h4>
        <div
          class="MuiBox-root css-1z137pa"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1qha2kt-MuiTypography-root"
          >
            YourBalance
          </p>
          <p
            class="MuiTypography-root MuiTypography-body1 css-le79b4-MuiTypography-root"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-15tfpcm-MuiSkeleton-root"
            />
          </p>
        </div>
        <div
          class="MuiBox-root css-1z137pa"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1qha2kt-MuiTypography-root"
          >
            stake:YourStakedBalance
          </p>
          <p
            class="MuiTypography-root MuiTypography-body1 css-le79b4-MuiTypography-root"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-15tfpcm-MuiSkeleton-root"
            />
          </p>
        </div>
        <div
          class="MuiBox-root css-1z137pa"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1qha2kt-MuiTypography-root"
          >
            stake:NextRewardAmount
          </p>
          <p
            class="MuiTypography-root MuiTypography-body1 css-le79b4-MuiTypography-root"
          >
            0 BASH
          </p>
        </div>
        <div
          class="MuiBox-root css-1z137pa"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1qha2kt-MuiTypography-root"
          >
            stake:NextRewardYield
          </p>
          <p
            class="MuiTypography-root MuiTypography-body1 css-le79b4-MuiTypography-root"
          >
            0.01 %
          </p>
        </div>
        <div
          class="MuiBox-root css-1z137pa"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1qha2kt-MuiTypography-root"
          >
            stake:ROIFiveDayRate
          </p>
          <p
            class="MuiTypography-root MuiTypography-body1 css-le79b4-MuiTypography-root"
          >
            
          </p>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="MuiBox-root css-0"
    >
      <h4
        class="MuiTypography-root MuiTypography-h4 css-10zuisz-MuiTypography-root"
      >
        stake:StakingMetrics
         
      </h4>
      <div
        class="MuiBox-root css-1z137pa"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-1qha2kt-MuiTypography-root"
        >
          YourBalance
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 css-le79b4-MuiTypography-root"
        >
          <span
            class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-15tfpcm-MuiSkeleton-root"
          />
        </p>
      </div>
      <div
        class="MuiBox-root css-1z137pa"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-1qha2kt-MuiTypography-root"
        >
          stake:YourStakedBalance
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 css-le79b4-MuiTypography-root"
        >
          <span
            class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-15tfpcm-MuiSkeleton-root"
          />
        </p>
      </div>
      <div
        class="MuiBox-root css-1z137pa"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-1qha2kt-MuiTypography-root"
        >
          stake:NextRewardAmount
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 css-le79b4-MuiTypography-root"
        >
          0 BASH
        </p>
      </div>
      <div
        class="MuiBox-root css-1z137pa"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-1qha2kt-MuiTypography-root"
        >
          stake:NextRewardYield
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 css-le79b4-MuiTypography-root"
        >
          0.01 %
        </p>
      </div>
      <div
        class="MuiBox-root css-1z137pa"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-1qha2kt-MuiTypography-root"
        >
          stake:ROIFiveDayRate
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 css-le79b4-MuiTypography-root"
        >
          
        </p>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`UserStakeMetrics Renders with optional metrics 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="MuiBox-root css-0"
      >
        <h4
          class="MuiTypography-root MuiTypography-h4 css-10zuisz-MuiTypography-root"
        >
          stake:StakingMetrics
           
        </h4>
        <div
          class="MuiBox-root css-1z137pa"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1qha2kt-MuiTypography-root"
          >
            YourBalance
          </p>
          <p
            class="MuiTypography-root MuiTypography-body1 css-le79b4-MuiTypography-root"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-15tfpcm-MuiSkeleton-root"
            />
          </p>
        </div>
        <div
          class="MuiBox-root css-1z137pa"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1qha2kt-MuiTypography-root"
          >
            stake:YourStakedBalance
          </p>
          <p
            class="MuiTypography-root MuiTypography-body1 css-le79b4-MuiTypography-root"
          >
            <span
              class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-15tfpcm-MuiSkeleton-root"
            />
          </p>
        </div>
        <div
          class="MuiBox-root css-1z137pa"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1qha2kt-MuiTypography-root"
          >
            stake:NextRewardAmount
          </p>
          <p
            class="MuiTypography-root MuiTypography-body1 css-le79b4-MuiTypography-root"
          >
            0 BASH
          </p>
        </div>
        <div
          class="MuiBox-root css-1z137pa"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1qha2kt-MuiTypography-root"
          >
            stake:NextRewardYield
          </p>
          <p
            class="MuiTypography-root MuiTypography-body1 css-le79b4-MuiTypography-root"
          >
            0.01 %
          </p>
        </div>
        <div
          class="MuiBox-root css-1z137pa"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1qha2kt-MuiTypography-root"
          >
            stake:ROIFiveDayRate
          </p>
          <p
            class="MuiTypography-root MuiTypography-body1 css-le79b4-MuiTypography-root"
          >
            
          </p>
        </div>
        <div
          class="MuiBox-root css-1z137pa"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1qha2kt-MuiTypography-root"
          >
            stake:EffectiveNextRewardAmount
          </p>
          <p
            class="MuiTypography-root MuiTypography-body1 css-le79b4-MuiTypography-root"
          >
            0.1 wSBASH
          </p>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="MuiBox-root css-0"
    >
      <h4
        class="MuiTypography-root MuiTypography-h4 css-10zuisz-MuiTypography-root"
      >
        stake:StakingMetrics
         
      </h4>
      <div
        class="MuiBox-root css-1z137pa"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-1qha2kt-MuiTypography-root"
        >
          YourBalance
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 css-le79b4-MuiTypography-root"
        >
          <span
            class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-15tfpcm-MuiSkeleton-root"
          />
        </p>
      </div>
      <div
        class="MuiBox-root css-1z137pa"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-1qha2kt-MuiTypography-root"
        >
          stake:YourStakedBalance
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 css-le79b4-MuiTypography-root"
        >
          <span
            class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-15tfpcm-MuiSkeleton-root"
          />
        </p>
      </div>
      <div
        class="MuiBox-root css-1z137pa"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-1qha2kt-MuiTypography-root"
        >
          stake:NextRewardAmount
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 css-le79b4-MuiTypography-root"
        >
          0 BASH
        </p>
      </div>
      <div
        class="MuiBox-root css-1z137pa"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-1qha2kt-MuiTypography-root"
        >
          stake:NextRewardYield
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 css-le79b4-MuiTypography-root"
        >
          0.01 %
        </p>
      </div>
      <div
        class="MuiBox-root css-1z137pa"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-1qha2kt-MuiTypography-root"
        >
          stake:ROIFiveDayRate
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 css-le79b4-MuiTypography-root"
        >
          
        </p>
      </div>
      <div
        class="MuiBox-root css-1z137pa"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-1qha2kt-MuiTypography-root"
        >
          stake:EffectiveNextRewardAmount
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 css-le79b4-MuiTypography-root"
        >
          0.1 wSBASH
        </p>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
